# sdl3-starter-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  toolchain.toml
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
src/: gui.rs  lib.rs  main.rs  sdl3.rs  sdl_helper.rs  ssl_cert.rs
src/sdl3/: callback.rs  log.rs  panic_hook.rs  util.rs
