[package]
name = "sdl_starter"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl", "https", "ssh"] }
sdl3-sys = { version = "0.6.3", features = ["build-from-source"] }
sdl3-image-sys = "0.6.2"
sdl3-ttf-sys = "0.6.0"
sdl3-main = "0.6.2"
egui = "0.34.1"
egui_glow = "0.34.1"
glow = "0.17.0"
egui_extras = { version = "0.34.1", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
